# m3u8-downloader

./: .metadata  README.md  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/bluevale/m3u8_downloader/: MainActivity.kt  MediaTranscoder.kt
android/app/src/profile/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: downloader.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: downloader.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: rust_lib_m3u8_downloader.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_m3u8_downloader.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/flutter/: generated_plugins.cmake
windows/runner/: main.cpp
