[package]
name = "rust_lib_m3u8_downloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib_m3u8_downloader"
crate-type = ["cdylib", "staticlib"]

[dependencies]
aes = { version = "0.7.5" }
ash = "0.38.0+1.3.281"
anyhow = "1.0.100"
block-modes = { version = "0.8.1" }
clap = { version = "4.5.48", features = ["derive"] }

flutter_rust_bridge = "=2.11.1"
futures = "0.3.31"

hex = "0.4.3"
indicatif = "0.18.3"
jni = "0.21.1"
log = "0.4.28"

m3u8-rs = "6.0.0"

reqwest = { version = "0.12.24", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls-webpki-roots"], default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "process"] }
url = "2.5.7"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
mediacodec = "0.1.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
